add download Series logo
