# routes/api/series/index.js
@@ -2,13 +2,19 @@ const express = require('express')
 const router = express.Router()
 const SeriesController = require('../../../controllers/seriesController')
 const guard = require('../../../helpers/guard')
+const upload = require('../../../helpers/upload')
 
 router
   .get('/series', guard, SeriesController.get)
-  .post('/series', guard, SeriesController.create)
+  .post('/series', upload.single('file'), guard, SeriesController.create)
 
 router
-  .put('/series/:seriesId', guard, SeriesController.update)
+  .put(
+    '/series/:seriesId',
+    upload.single('file'),
+    guard,
+    SeriesController.update,
+  )
   .get('/series/:seriesId', guard, SeriesController.getById)
 
 module.exports = router
